[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Components/PlayerBot.gd" type="Script" id=1]

[node name="PlayerBot" type="Node"]
script = ExtResource( 1 )

[node name="InWaterTimer" type="Timer" parent="."]
one_shot = true

[node name="BossAttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InWaterTimer" to="." method="_on_InWaterTimer_timeout"]
[connection signal="timeout" from="BossAttackTimer" to="." method="_on_BossAttackTimer_timeout"]
